--- a/Booki1.html
+++ b/Booki1.html
@@ -41,7 +41,7 @@
         
         <section class="barre-recherche">    
             <div class="localisation">
-                <i class="fa fa-map-marker-alt fa-lg"></i>
+                <i class="fa fa-map-marker-alt fa-sm"></i>
             </div>
             <div class="selectionMarseille">
                 <form method="post" action="#">
@@ -58,19 +58,19 @@
         <section class="filtres">
             <h2>Filtres</h2>
             <div class="filtre-box">
-                <span class="filtre-icone"><i class="fa-solid fa-money-bill-wave fa-lg"></i></span>
+                <span class="filtre-icone"><i class="fa-solid fa-money-bill-wave fa-sm"></i></span>
                 <span class="filtre-texte"><a href="#">Économique</a></span>
             </div>
             <div class="filtre-box"> 
-                <span class="filtre-icone"><i class="fa-solid fa-child-reaching fa-lg"></i></span>
+                <span class="filtre-icone"><i class="fa-solid fa-child-reaching fa-sm"></i></span>
                 <span class="filtre-texte"><a href="#">Familial</a></span>
                 </div>
             <div class="filtre-box">   
-                <span class="filtre-icone"><i class="fa-solid fa-heart fa-lg"></i></span>
+                <span class="filtre-icone"><i class="fa-solid fa-heart fa-sm"></i></span>
                 <span class="filtre-texte"><a href="#">Romantique</a></span>
             </div>
             <div class="filtre-box">   
-                <span class="filtre-icone"><i class="fa-solid fa-dog fa-lg"></i></span>
+                <span class="filtre-icone"><i class="fa-solid fa-dog fa-sm"></i></span>
                 <span class="filtre-texte"><a href="#">Animaux autorisés</a></span>
             </div>                         
         </section>
@@ -97,11 +97,11 @@
                             <h3>Auberge La Cannebière</h3>
                             <p>Nuit à partir de <span>25€</span></p>
                             <div class="carte-star-rating"> 
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <span><i class="fa-solid fa-star fa-sm"></i></span>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <span><i class="fa-solid fa-star fa-xs"></i></span>
                             </div>
                         </div>
                     </a>
@@ -113,11 +113,11 @@
                             <h3>Hôtel du port</h3>
                             <p>Nuit à partir de 52<span>€</span></p>
                             <div class="carte-star-rating"> 
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <i class="fa-solid fa-star fa-sm"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
                             </div>
                         </div>
                     </a>
@@ -129,11 +129,11 @@
                             <h3>Hôtel Les mouettes</h3>
                             <p>Nuit à partir de 76<span>€</span></p>
                             <div class="carte-star-rating"> 
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <span><i class="fa-solid fa-star fa-sm"></i></span>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <span><i class="fa-solid fa-star fa-xs"></i></span>
                             </div>
                         </div>
                     </a>
@@ -147,10 +147,10 @@
                                 <h3>Hôtel de la mer</h3>
                                 <p>Nuit à partir de 46<span>€</span></p>
                                 <div class="carte-star-rating"> 
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <i class="fa-solid fa-star fa-sm"></i>
-                                    <span><i class="fa-solid fa-star fa-sm"></i><i class="fa-solid fa-star fa-sm"></i></span>
+                                    <i class="fa-solid fa-star fa-xs"></i>
+                                    <i class="fa-solid fa-star fa-xs"></i>
+                                    <i class="fa-solid fa-star fa-xs"></i>
+                                    <span><i class="fa-solid fa-star fa-xs"></i><i class="fa-solid fa-star fa-xs"></i></span>
                                 </div>
                             </div>
                         </a>
@@ -162,11 +162,11 @@
                             <h3>Auberge Le Panier</h3>
                             <p>Nuit à partir de <span>23€</span></p>
                             <div class="carte-star-rating"> 
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <span><i class="fa-solid fa-star fa-sm"></i></span>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <span><i class="fa-solid fa-star fa-xs"></i></span>
                             </div>
                             </div>  
                         </a>
@@ -178,11 +178,11 @@
                             <h3>Hôtel Chez Amina</h3>
                             <p>Nuit à partir de 96<span>€</span></p>
                             <div class="carte-star-rating"> 
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <i class="fa-solid fa-star fa-sm"></i>
-                                <i class="fa-solid fa-star fa-sm"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
                             </div>
                         </div>
                     </a>
@@ -206,11 +206,11 @@
                             <p>Nuit à partir de 128<span>€</span></p>
                         </div>
                         <div class="carte-star-rating"> 
-                            <i class="fa-solid fa-star fa-sm"></i>
-                            <i class="fa-solid fa-star fa-sm"></i>
-                            <i class="fa-solid fa-star fa-sm"></i>
-                            <i class="fa-solid fa-star fa-sm"></i>
-                            <span><i class="fa-solid fa-star fa-sm"></i></span>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <span><i class="fa-solid fa-star fa-xs"></i></span>
                         </div>
                     </div>
                 </a>
@@ -224,11 +224,11 @@
                             <p>Nuit à partir de 71<span>€</span></p>
                         </div>
                         <div class="carte-star-rating"> 
-                            <i class="fa-solid fa-star fa-sm"></i>
-                            <i class="fa-solid fa-star fa-sm"></i>
-                            <i class="fa-solid fa-star fa-sm"></i>
-                            <i class="fa-solid fa-star fa-sm"></i>
-                           <span><i class="fa-solid fa-star fa-sm"></i></span>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                           <span><i class="fa-solid fa-star fa-xs"></i></span>
                         </div>
                     </div>
                 </a>
@@ -242,11 +242,11 @@
                             <p>Nuit à partir de 68<span>€</span></p>
                             </div>
                         <div class="carte-star-rating"> 
-                            <i class="fa-solid fa-star fa-sm"></i>
-                            <i class="fa-solid fa-star fa-sm"></i>
-                            <i class="fa-solid fa-star fa-sm"></i>
-                            <i class="fa-solid fa-star fa-sm"></i>
-                            <span><i class="fa-solid fa-star fa-sm"></i></span>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <span><i class="fa-solid fa-star fa-xs"></i></span>
                         </div>
                     </div>
                 </a>
