--- a/Booki1.html
+++ b/Booki1.html
@@ -39,7 +39,7 @@
         <section class="titre">
             <h1>Trouvez votre hébergement pour des vacances de rêve</h1> 
             <p class="sous-titre">En plein centre ville ou en pleine nature</p> 
-       </section> 
+        </section> 
 
         <section class="barre-recherche">    
             <div class="localisation">
@@ -79,10 +79,10 @@
             </div>                         
         </section>
         
-        <div class="circle-info">
+        <section class="circle-info">
             <i class="fa-solid fa-info fa-xs"></i>
-            Plus de 500 logements sont disponibles dans cette ville
-        </div>
+            <p>Plus de 500 logements sont disponibles dans cette ville
+        </section>
     </div>
 
 
@@ -266,7 +266,7 @@
         <div class ="articles-activites">
             <article class="colonne-une">
                 <a href="#">
-                    <div class="carte-grande">
+                    <div class="carte-grande-1">
                         <img src="Images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Photo du vieux Port">
                         <h3>Vieux Port</h3>
                     </div>    
@@ -274,13 +274,13 @@
             </article>
             <article class="colonne-deux">
                 <a href="#">
-                    <div class="carte-moyenne">
+                    <div class="carte-moyenne-2">
                         <img src="Images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Photo du fort de Pomègues">
                         <h3>Fort de Pomègues</h3>
                     </div>
                 </a>
                 <a href="#">  
-                    <div class="carte-petite">      
+                    <div class="carte-petite-3">      
                         <img src="Images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Photo des Îles du Frioul">
                         <h3>Îles du Frioul</h3>
                     </div>
@@ -288,7 +288,7 @@
             </article>
             <article class="colonne-une">
                  <a href="#">
-                    <div class="carte-grande">
+                    <div class="carte-grande-4">
                         <img src="Images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Photo du Parc National des Calanqes">
                         <h3>Parc National des Calanques</h3>
                     </div>
@@ -296,13 +296,13 @@
             </article>
             <article class="colonne-deux">
                 <a href="#">
-                    <div class="carte-petite">
+                    <div class="carte-petite-5">
                         <img src="Images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Photo de Notre-Dame-de-la-Garde">
                         <h3>Notre-Dame-de-la-Garde</h3>
                     </div>
                 </a>
                 <a href="#">
-                    <div class="carte-moyenne">
+                    <div class="carte-moyenne-6">
                         <img src="Images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Photo du Parc Longchamp">
                         <h3>Parc Longchamp</h3>
                     </div>
