correction filtre et titre cartes populaires

--- a/Booki1.html
+++ b/Booki1.html
@@ -206,7 +206,7 @@
                     <img src="Images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Photo Hôtel Le soleil du matin">
                     <div class="carte-texte-populaires">
                         <div class="carte-nom-populaires">    
-                            <h3>Hôtel Le Soleil du matin</h3>
+                            <h3>Hôtel Le Soleil du</br>matin</h3>
                             <p>Nuit à partir de 128<span>€</span></p>
                         </div>
                         <div class="carte-star-rating"> 
@@ -224,7 +224,7 @@
                     <img src="Images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Photo Chambres d'hôtes Au coeur de l'eau">
                     <div class="carte-texte-populaires">
                         <div class="carte-nom-populaires">
-                            <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                            <h3>Au coeur de l'eau</br>Chambres d'hôtes</h3>
                             <p>Nuit à partir de 71<span>€</span></p>
                         </div>
                         <div class="carte-star-rating"> 
@@ -242,7 +242,7 @@
                     <img src="Images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Photo Hôtel Tout bleu et Blanc">
                     <div class="carte-texte-populaires">
                         <div class="carte-nom-populaires">  
-                            <h3>Hôtel Tout bleu et Blanc</h3>
+                            <h3>Hôtel Tout bleu et</br>Blanc</h3>
                             <p>Nuit à partir de 68<span>€</span></p>
                             </div>
                         <div class="carte-star-rating"> 
